<resources>
    <string name="homeTextUser">User</string>
    <string name="homeTextLocation">Location</string>
    <string name="homeButtonVendors">Vendors</string>
    <string name="homeButtonMenu">Buy</string>
    <string name="homeButtonCodes">Codes</string>
    <string name="homeButtonProfile">Profile</string>
    <string name="homeImageDescriptionUser">User Image</string>
    <string name="homeImageDescriptionServer">Server Image</string>
    <string name="homeImageButtonDescriptionMenu">Menu</string>
    <string name="homeImageButtonDescriptionCart">Cart</string>
    <string name="homeImageButtonDescriptionCodes">Codes</string>
    <string name="homeImageButtonDescriptionProfile">Profile</string>
    <string name="loginTextInstruction">Select a service to login:</string>
    <string name="dialogLoginPatronButtonRequestPassword">Forgot Password</string>
    <string name="dialogLoginPatronButtonCreateAccount">Create New Account</string>
    <string name="createAccountTextFirst">First:</string>
    <string name="createAccountTextLast">Last:</string>
    <string name="createAccountTextEmail">Email:</string>
    <string name="createAccountTextPassword">Password:</string>
    <string name="createAccountTextConfirm">Confirm:</string>
    <string name="createAccountTextBirthday">Birthday:</string>
    <string name="createAccountButtonCancel">Cancel</string>
    <string name="createAccountButtonSubmit">Submit</string>
    <string name="addCardTextName">Full Name:</string>
    <string name="addCardTextNumber">Card Number:</string>
    <string name="addCardTextCode">CVV Security Code:</string>
    <string name="addCardTextExpirationMonth">Expiration Month:</string>
    <string name="addCardTextExpirationYear">Expiration Year:</string>
    <string name="addCardTextAddress">Address:</string>
    <string name="addCardTextState">State:</string>
    <string name="addCardTextCity">City:</string>
    <string name="addCardTextPostalCode">Postal Code:</string>
    <string name="addCardButtonSubmit">Submit</string>
    <string name="addBankTextName">Account Holder Name:</string>
    <string name="addBankTextNumber">Account Number:</string>
    <string name="addBankTextRouting">Routing Number:</string>
    <string name="addBankTextType">Account Type:</string>
    <string name="addBankButtonSubmit">Submit</string>
    <string name="menuButtonCheckout">Checkout</string>
    <string name="menuButtonFavorites">Favorites</string>
    <string name="menuButtonBeer">Beer</string>
    <string name="menuButtonShots">Shots</string>
    <string name="menuButtonCocktails">Cocktails</string>
    <string name="menuButtonMartinis">Martinis</string>
    <string name="menuButtonWine">Wine</string>
    <string name="menuImageButtonDescriptionDelete">Delete from Tab</string>
    <string name="cartButtonStation">Station</string>
    <string name="cartButtonPayment">Payment</string>
    <string name="cartButtonTip">Tip</string>
    <string name="cartButtonCoupon">Coupon</string>
    <string name="cartButtonComment">Comment</string>
    <string name="cartButtonFinish">Pay Now</string>
    <string name="codeImageImageViewDescription">QR Code</string>
    <string name="scanTextOrder">Order</string>
    <string name="profileImageAvatar">Image</string>
    <string name="profileTextUser">First Last</string>
    <string name="profileTextFacebook">Facebook: Not Connected</string>
    <string name="profileTextTwitter">Twitter: Not Connected</string>
    <string name="profileTextGooglePlus">Google+: Not Connected</string>
    <string name="profileButtonLogout">Logout</string>
    <string name="profileButtonAddPayment">Add Payment</string>
    <string name="profileButtonRemovePayment">Remove Payment</string>
    <string name="profileButtonFacebook">Connect</string>
    <string name="profileButtonTwitter">Connect</string>
    <string name="profileButtonGooglePlus">Connect</string>
    <string name="searchVendorsTextMain">Search:</string>
    <string name="searchItemsTextMain">Search:</string>
    <string name="settingsTextLocate">Auto-Select Nearest Vendor</string>
    <string name="settingsTextFacebookPublishOrder">Publish Orders to Facebook</string>
    <string name="settingsTextFacebookPublishFavoriteVendor">Publish Favorite Vendors to Facebook</string>
    <string name="settingsTextFacebookPublishFavoriteItem">Publish Favorite Items to Facebook</string>
    <string name="settingsButtonFeedback">Give Feedback</string>
    <string name="settingsButtonRate">Rate App</string>
    <string name="helpText1">First, select the vendor you want to buy from.</string>
    <string name="helpText2">Tap on items to add them to your cart.
        Filter items by category to help find what you\'re looking for.
        Checkout when you\'re done.</string>
    <string name="helpText3">Review and edit your cart, then finish your order.</string>
    <string name="helpText4">A push notification will be sent when your order is ready.
        You can check the status of your orders in the codes screen.
        Tap on an order to view its QR Code.</string>
    <string name="helpText5">Scan your QR Code to verify your order, and you\'re all done!</string>
    <string name="helpTextPage">1 / 5</string>
    <string name="helpButtonStart">Tap Here to Get Started!</string>
    <string name="helpImage1ContentDescription">Image 1</string>
    <string name="helpImage2ContentDescription">Image 2</string>
    <string name="helpImage3ContentDescription">Image 3</string>
    <string name="helpImage4ContentDescription">Image 4</string>
    <string name="helpImage5ContentDescription">Image 5</string>
    <string name="helpImageButtonNextContentDescription">Next</string>
    <string name="helpImageButtonPreviousContentDescription">Previous</string>
    <string name="locationListItemTextName">John\'s</string>
    <string name="locationListItemTextAddress">Los Angeles, 100 Olympia Avenue, CA 90091</string>
    <string name="locationListItemTextPhone">(852) 928&#8211;8737</string>
    <string name="productListItemTextName">Budweiser</string>
    <string name="productListItemTextType">Domestic Beer</string>
    <string name="productListItemTextAlcohol">None</string>
    <string name="productListItemTextPrice">$2.00</string>
    <string name="cartListItemTextName">Budweiser</string>
    <string name="cartListItemTextType">Domestic Beer</string>
    <string name="cartListItemTextAlcohol">None</string>
    <string name="cartListItemTextPrice">$2.00</string>
    <string name="codeListItemTextProducts">1 Budweiser</string>
    <string name="codeListItemTextTime">1/1/10, 12:00 PM</string>
    <string name="codeListItemTextStatus">Waiting</string>
    <string name="removePaymentListItemTextNumber">xxxxxxxxx0000</string>
    <string name="removePaymentListItemTextType">Debit</string>
    <string name="removePaymentListItemTextBankName">Chase</string>
    <string name="removePaymentListItemTextAddress"></string>
    <string name="app_title">Flash VIP</string>
    <string name="app_name">Flash VIP</string>
    <string name="appName">Flash VIP</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab">\u0009</string>
    <string name="titleActivityHome">Flash VIP</string>
    <string name="titleActivityLogin">Login</string>
    <string name="titleActivityCreateAccount">Create Account</string>
    <string name="titleActivityPayment">Payment</string>
    <string name="titleActivityAddCard">Add Card</string>
    <string name="titleActivityAddBank">Add Bank</string>
    <string name="titleActivityRemovePayment">Remove Payment</string>
    <string name="titleActivityMenu">Buy</string>
    <string name="titleActivityCart">Cart</string>
    <string name="titleActivityCodes">Codes</string>
    <string name="titleActivityScan">Scan</string>
    <string name="titleActivityFavorites">Favorites</string>
    <string name="titleActivityLocations">Vendors</string>
    <string name="titleActivityProfile">Profile</string>
    <string name="titleActivitySearchVendors">Search</string>
    <string name="titleActivitySearchItems">Search</string>
    <string name="titleActivitySettings">Settings</string>
    <string name="titleActivityHelp">Help</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemHelp">Help</string>
    <string name="menuItemSearch">Search</string>
    <string name="menuItemLogout">Logout</string>
    <string name="menuItemLogin">Login</string>
    <string name="menuItemFeedback">Feedback</string>
    <string name="menuItemInvite">Invite</string>
    <string name="miscTextNoConnection">No internet connection.</string>
    <string name="miscTextNoLocations">There are no locations.</string>
    <string name="miscTextNoItems">There are no items on the menu.</string>
    <string name="miscTextNoItemsCart">No items have been added to your cart.</string>
    <string name="miscTextNoCodes">You have not placed any orders</string>
    <string name="miscTextNoCodeImage">This code is unavailable.</string>
	<string name="button_send">Send</string>
	<string name="edit_message">Enter a message</string>
	<string name="bar_name">(Select Bar)</string>
	<string name="feedback_button">Feedback</string>
	<string name="tab_button">Tab</string>
<string name="condes_beer">Beers</string>
    <string name="condes_cocktail">Cocktails</string>
    <string name="condes_shot">Shots</string>
    <string name="condes_martini">Martinis</string>
    <string name="textbox_search_default">Search</string>
    <string-array name="array_navigation">
        <item>Buy</item>
        <item>Orders</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>
    <string-array name="array_card_expiration_months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="array_bank_types">
        <item>Checking</item>
        <item>Savings</item>
    </string-array>
    <string-array name="array_card_expiration_years">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string-array name="array_sort_order">
        <item>↑ Ascending</item>
        <item>↓ Descending</item>
    </string-array>
    <string-array name="array_sort_servers">
        <item>→ Sort by Name</item>
        <item>→ Sort by Address</item>
        <item>→ Sort by City</item>
        <item>→ Sort by State</item>
        <item>→ Sort by Zip</item>
        <item>→ Sort by Phone Number</item>
    </string-array>
    <string-array name="array_sort_drinks">
        <item>→ Sort by Name</item>
        <item>→ Sort by Price</item>
        <item>→ Sort by Type</item>
    </string-array>
    <string-array name="array_default_alcohols">
        <item>House Liquor</item>
    </string-array>
</resources>