<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="left"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="48dp" >

        <TextView
            android:id="@+id/bar_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:onClick="onClick"
            android:gravity="center_vertical|center"
            android:text="@string/bar_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:typeface="normal" />

        <Button
            android:id="@+id/tab_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/darkblue"
            android:height="96dp"
            android:text="@string/tab_button"
            android:typeface="monospace"
            android:width="48dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/searchLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical"
        android:background="@color/lightgray" >

        <MultiAutoCompleteTextView
            android:id="@+id/SearchBar1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/imgbut_search"
            android:background="@color/dark"
            android:ems="10"
            android:hint="@string/textbox_search_default"
            android:imeOptions="actionSearch"
            android:singleLine="True"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/imgbut_search"
            android:background="@color/dark"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/textbox_search_default"
            android:src="@drawable/ic_action_search" />

        <Spinner
            android:id="@+id/drop_sort_servers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/SearchBar1"
            android:background="@color/lightgray"
            android:entries="@array/array_sort_servers"
            android:padding="@dimen/SpinnerPadding" />
        
        <Spinner 
            android:id="@+id/drop_sort_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/SearchBar1"
            android:background="@color/lightgray"
            android:entries="@array/array_sort_order"
            android:padding="@dimen/SpinnerPadding"
            />
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:layout_below="@id/searchLayout"
        android:background="@color/black"
        android:gravity="top|center_horizontal" >

        <ProgressBar
            android:id="@+id/progress_bar_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone" />

        <ListView
            android:id="@+id/list_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:drawSelectorOnTop="true"
            android:padding="0dp"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="visible" >

        </ListView>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <ImageButton
            android:id="@+id/beer_imgbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/condes_beer"
            android:src="@drawable/ic_menu_beer" />

        <ImageButton
            android:id="@+id/cocktail_imgbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/condes_cocktail"
            android:src="@drawable/ic_menu_cocktail" />

        <ImageButton
            android:id="@+id/shot_imgbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/condes_shot"
            android:src="@drawable/ic_menu_shots" />

        <ImageButton
            android:id="@+id/martini_imgbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/condes_martini"
            android:src="@drawable/ic_menu_martini" />
    </LinearLayout>

</RelativeLayout>
